--- a/index.html
+++ b/index.html
@@ -62,7 +62,27 @@
   </section>
   <!-- footer section -->
   <footer>
-
+    <div class="footer-top">
+      <div class="wrapper">  
+        <div class="row">
+          <div class="col-md-5">
+            Left col
+          </div>
+          <div class="col-md-4">Mid col</div>
+          <div class="col-md-3">Right Col</div>
+        </div>
+      </div>
+    </div>
+    <div class="bottom-footer">
+      <div class="wrapper">
+        <div class="row">
+          <div class="col-md-6">
+            <p></p>
+          </div>
+          <div class="col-md-6"></div>
+        </div>
+      </div>
+    </div>
   </footer> 
   <script type="text/javascript" src="js/jquery.flexslider.js"></script>
   <script type="text/javascript">
