Created html for home page

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </head>
   <body>
   <!-- header section -->
-    <header class="hide">
+    <header>
       <div class="wrapper">
           <div class="logo"><img src="images/logo.png" alt="" /></div>
           <nav>
@@ -45,20 +45,159 @@
         <div class="flexslider">
           <ul class="slides">
               <li>
-                <div class="flexslider-in"><img src="images/slider/kitchen_adventurer_cheesecake_brownie.jpg" /></div>
+                <div class="flexslider-in">
+                    <img src="images/slider/slider-img-01.png" />
+                    <div class="bannerInfo">
+                        <div class="inner">
+                        <h1>MPR Software Technologies 
+is one of the fast growing IT solutions</h1>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                            <div class="btn-action">
+                                <a class="btn banner-btn" href="#"><img src="images/but-red-arrow.png" alt="" />More</a>
+                            </div>
+                        </div>    
+                    </div>
+                </div>
             </li>
             <li>
-                <div class="flexslider-in"><img src="images/slider/kitchen_adventurer_lemon.jpg" /></div>
+                <div class="flexslider-in">
+                    <img src="images/slider/slider-img-02.png" />
+                    <div class="bannerInfo">
+                        <div class="inner">
+                        <h1>MPR Software Technologies 
+is one of the fast growing IT solutions</h1>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                            <div class="btn-action">
+                                <a class="btn banner-btn" href="#"><img src="images/but-red-arrow.png" alt="" />More</a>
+                            </div>                             
+                        </div>                        
+                    </div>                    
+                </div>
             </li>
             <li>
-                <div class="flexslider-in"><img src="images/slider/kitchen_adventurer_donut.jpg" /></div>
-            </li>
-            <li>
-                <div class="flexslider-in"><img src="images/slider/kitchen_adventurer_caramel.jpg" /></div>
+                <div class="flexslider-in">
+                    <img src="images/slider/slider-img-03.png" />
+                    <div class="bannerInfo">
+                        <div class="inner">
+                        <h1>MPR Software Technologies 
+is one of the fast growing IT solutions</h1>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                        <div class="btn-action">
+                            <a class="btn banner-btn" href="#"><img src="images/but-red-arrow.png" alt="" />More</a>
+                        </div>                            
+                        </div> 
+                    </div>
+                </div>
             </li>
           </ul>
         </div>
-        <!-- banner section end -->
+    <!-- banner section end -->
+    <!-- our service -->  
+      <div class="our-services">
+          <div class="wrapper">
+              <div class="row">
+                  <div class="col-md-3">
+                      <div class="in-sec">
+                          <div class="img"><img src="images/hand-icon.png" alt="" /></div>
+                          <h3><a href="#">Technology Consulting</a></h3>
+                          <p>Providing our customers with the right consulting staff, who become part of their project teams and contribute</p>
+                          <button class="primary-btn btn" type="button"><img src="images/but-white-arrow.png" alt="" /> More</button>
+                      </div>
+                  </div>
+                  <div class="col-md-3">
+                      <div class="in-sec">
+                          <div class="img"><img src="images/services-icon.png" alt="" /></div>
+                          <h3><a href="#">Services</a></h3>
+                          <p>Providing our customers with the right consulting staff, who become part of their project teams and contribute</p>
+                          <button class="primary-btn btn" type="button"><img src="images/but-white-arrow.png" alt="" /> More</button>
+                      </div>                      
+                  </div>
+                  <div class="col-md-3">
+                      <div class="in-sec">
+                          <div class="img"><img src="images/development-icon.png" alt="" /></div>
+                          <h3><a href="#">Software Development</a></h3>
+                          <p>Providing our customers with the right consulting staff, who become part of their project teams and contribute</p>
+                          <button class="primary-btn btn" type="button"><img src="images/but-white-arrow.png" alt="" /> More</button>
+                      </div>                      
+                  </div>
+                  <div class="col-md-3">
+                    <div class="in-sec">
+                          <div class="img"><img src="images/training-icon.png" alt="" /></div>
+                          <h3><a href="#">IT-Training</a></h3>
+                          <p>Providing our customers with the right consulting staff, who become part of their project teams and contribute</p>
+                          <button class="primary-btn btn" type="button"><img src="images/but-white-arrow.png" alt="" /> More</button>
+                      </div> 
+                  </div>
+              </div>
+          </div>
+      </div>
+    <!-- our service end --> 
+    <!-- our service bottom strip -->  
+    <div class="red-strip">&nbsp;</div>
+    <!-- our service bottom end -->
+    <!-- welcome section -->  
+    <div class="welcome-sec">
+      <div class="wrapper">
+    <div class="right-col">
+        <!-- our mission section -->
+        <div class="our-mission">
+           <h1 class="head">Our Mission</h1>
+           <div class="img"><img src="images/our-mission-img.png" alt="" /></div>
+           <p class="description">Today’s business environment demands that progressive companies leverage proven experience and creativity to achieve a clear competitive advantage in the global market. We are committed to continually adapting, improving and evolving our role in business and society while striving to ensure all our employees enjoy a higher quality of life as we share our prosperity.</p>
+            <div class="btn-action">
+                <a class="btn secd-btn" href="#"><img src="images/but-red-arrow.png" alt="" />More</a>
+            </div>
+        </div>
+        <!-- our mission section end -->
+    </div>          
+        <div class="left-col">
+        <h1 class="pageTitle">Welcome</h1>
+        <p>MPR Software Technologies is one of the fast growing IT solutions and services provider offering a wide array of solutions customized for a range of key verticals and horizontals. From strategy consulting right through to implementing IT solutions for customers, providing innovative business and technology services that deliver measurable results. As a diverse end-to-end IT solutions provider, MPR Soft offers a range of expertise aimed at helping customers re-engineer and re-invent their businesses to compete successfully in an ever-changing marketplace. We provide a seamless approach to business, technology & professional services by combining excellence in execution with continuous innovation to help our clients effectively compete in the Knowledge Era.</p>
+        <p>MPR Soft Technologies team comprises of ace professionals, each with years of experience, rich industry knowledge and multidimensional skills. They form a formidable think tank with their industry knowledge, understanding of client requirements, processes and key client backgrounds. </p>
+    </div>
+    </div>      
+    </div>
+    <!-- welcome section end -->
+    <div class="why-choose-sec">
+        <div class="wrapper">
+            <h1>Why Choose Us?</h1>
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="box">
+                        <div class="img"><a href="#"><img src="images/client-img.png" alt="" /></a></div>
+                        <h4><a href="#">Our clients</a></h4>
+                        <p>Our services are created with inspiration, checked for quality and originality.</p>
+                        <div class="btn-action"><a href="#" class="btn secd-btn"><img alt="" src="images/but-red-arrow.png">More</a></div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="box">
+                        <div class="img"><a href="#"><img src="images/get-know-img.png" alt="" /></a></div>
+                        <h4><a href="#">get to know about us</a></h4>
+                        <p>Just browse through all our services and ﬁnd what you’re looking for.</p>
+                        <p>&nbsp;</p>
+                        <div class="btn-action"><a href="#" class="btn secd-btn"><img alt="" src="images/but-red-arrow.png">More</a></div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="box">
+                        <div class="img"><a href="#"><img src="images/developed-img.png" alt="" /></a></div>
+                        <h4><a href="#">what we developed</a></h4>
+                        <p>Just our solution meets public needs,We experienced and simple reliable.</p>
+                        <div class="btn-action"><a href="#" class="btn secd-btn"><img alt="" src="images/but-red-arrow.png">More</a></div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="box">
+                        <div class="img"><a href="#"><img src="images/touch-img.png" alt="" /></a></div>
+                        <h4><a href="#">get in touch with us</a></h4>
+                        <p>And we love the challenge of doing something diferent and something special.</p>
+                        <div class="btn-action"><a href="#" class="btn secd-btn"><img alt="" src="images/but-red-arrow.png">More</a></div>
+                    </div>
+                </div>                
+            </div>
+        </div>
+    </div>      
   </section>
   <!-- footer section -->
   <footer>
@@ -66,10 +205,32 @@
       <div class="wrapper">  
         <div class="row">
           <div class="col-md-5">
-            Left col
+            <h3>Latest News</h3>
+            <div class="latestNews"> 
+                <ul class="slides">
+                  <li>MPR Software Technologies is one of the fast growing IT solutions and services provider offering a wide array of solutions customized.</li>
+                    <li>MPR Software Technologies is one of the fast growing IT solutions and services provider offering a wide array of solutions customized.</li>
+                    <li>MPR Software Technologies is one of the fast growing IT solutions and services provider offering a wide array of solutions customized.</li>
+                </ul>
+              </div>    
           </div>
-          <div class="col-md-4">Mid col</div>
-          <div class="col-md-3">Right Col</div>
+          <div class="col-md-3">
+            <div class="address">  
+            <h3>Contact Us</h3>
+            <p>Address: 21250 Barley Hall Ter,<br/>
+                Ashburn VA 20147</p>
+              <p>&nbsp;</p>
+
+<p>Phone: 972.974.1473<br/>
+
+Email: info@mprsoft.com </p>
+        </div>        
+          </div>
+          <div class="col-md-4">
+              <h3>SEND US A MESSAGE</h3>
+              <p>If you're having problems about service, then don't hesitate to ask for help on the Forums.</p>
+              <button class="btn send-email-btn" type="button">Click to send us an email</button>
+          </div>
         </div>
       </div>
     </div>
@@ -77,9 +238,16 @@
       <div class="wrapper">
         <div class="row">
           <div class="col-md-6">
-            <p></p>
+            <p>© Copyright 2014.mprsoftinc. All Rights Reserved. </p>
           </div>
-          <div class="col-md-6"></div>
+          <div class="col-md-6">
+              <ul class="social-links">
+                  <li><a class="facebook" href="#"></a></li>
+                  <li><a class="twitter" href="#"></a></li>
+                  <li><a class="g-plus" href="#"></a></li>
+                  <li><a class="pin-share" href="#"></a></li>
+              </ul>
+          </div>
         </div>
       </div>
     </div>
@@ -94,7 +262,14 @@
         animation: 'slide',
         directionNav: false,
       });
-    });
+    });  
+    $(window).load(function(){
+      $('.latestNews').flexslider({
+        animation: 'slide',
+        directionNav: false,
+        controlNav: false,
+      });
+    });        
   </script>
   </body>
 </html>
