Created dropdown menu

--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
             <ul>
               <li><a class="active" href="index.html">Home</a></li>
               <li><a href="aboutus.html">About Us</a></li>
+              <li class="dropdown"><a href="aboutus.html">Services</a>
+                  <ul class="menu-hover">
+                    <li><a href="consulting.html">Technology Consulting</a></li>
+                    <li><a href="software.html">Software Development</a></li>
+                    <li><a href="services.html">Application Development</a></li>
+                    <li><a href="ittraining.html">IT-Training</a></li>
+                  </ul>
+              </li>
               <li><a href="solutions.html">Solutions</a></li>
               <li><a href="career.html">Career</a></li>
               <li><a href="contact.html">Contact</a></li>
@@ -151,9 +159,9 @@ is one of the fast growing IT solutions</h1>
         <!-- our mission section end -->
     </div>          
         <div class="left-col">
-        <h1 class="pageTitle">Welcome</h1>
+        <h1 class="pageTitle">Welcometo MPR Software Technologies</h1>
         <p>MPR Software Technologies is one of the fast growing IT solutions and services provider offering a wide array of solutions customized for a range of key verticals and horizontals. From strategy consulting right through to implementing IT solutions for customers, providing innovative business and technology services that deliver measurable results. As a diverse end-to-end IT solutions provider, MPR Soft offers a range of expertise aimed at helping customers re-engineer and re-invent their businesses to compete successfully in an ever-changing marketplace. We provide a seamless approach to business, technology & professional services by combining excellence in execution with continuous innovation to help our clients effectively compete in the Knowledge Era.</p>
-        <p>MPR Soft Technologies team comprises of ace professionals, each with years of experience, rich industry knowledge and multidimensional skills. They form a formidable think tank with their industry knowledge, understanding of client requirements, processes and key client backgrounds. </p>
+        <p>MPR Soft Technologies team comprises of ace professionals, each with years of experience, rich industry knowledge and multidimensional skills. They form a formidable think tank with their industry knowledge, understanding of client requirements, processes and key client backgrounds.</p>
     </div>
     </div>      
     </div>
@@ -238,7 +246,7 @@ Email: info@mprsoft.com </p>
       <div class="wrapper">
         <div class="row">
           <div class="col-md-6">
-            <p>© Copyright 2014.mprsoftinc. All Rights Reserved. </p>
+            <p>© Copyright 2014.mprsoftinc. All Rights Reserved.</p>
           </div>
           <div class="col-md-6">
               <ul class="social-links">
