--- a/services.html
+++ b/services.html
@@ -12,6 +12,8 @@
     <link href="css/responsive-styles.css" rel="stylesheet" type="text/css">
     <!-- flexslider styles -->
     <link rel="stylesheet" href="css/flexslider.css" type="text/css" />
+    <!-- responsivemobilemenu -->
+    <link rel="stylesheet" href="css/responsivemobilemenu.css" type="text/css"/>    
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -21,14 +23,16 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script type="text/javascript" src="js/jquery.min.js"></script>  
     <!-- Modernizr -->
-    <script type="text/javascript" src="js/modernizr.js"></script>   
+    <script type="text/javascript" src="js/modernizr.js"></script>
+    <!-- responsivemobilemenu -->
+    <script type="text/javascript" src="js/responsivemobilemenu.js"></script>       
   </head>
   <body>
   <!-- header section -->
     <header>
       <div class="wrapper">
-          <div class="logo"><img src="images/logo.png" alt="" /></div>
-          <nav>
+          <div class="logo"><a href="index.html"><img src="images/logo.png" alt="" /></a></div>
+          <nav class="m-menu">
             <ul>
               <li><a href="index.html">Home</a></li>
               <li><a href="aboutus.html">About Us</a></li>
@@ -54,7 +58,7 @@
           <ul class="slides">
               <li>
                 <div class="flexslider-in">
-                    <img src="images/slider/slider-img-01.png" />
+                    <img src="images/slider/slider-img-01.png" alt="" />
                     <div class="bannerInfo">
                         <div class="inner">
                             <h1>Services</h1>
@@ -72,14 +76,14 @@
 <p>MPR Software Services offers consulting and information technology (IT) services worldwide. Sevate operates primarily in three segments: IT services, Software products and Business Process Outsourcing (BPO). The IT Services segment provides a wide range of services, including software development, packaged software customization/integration, software maintenance, software design/engineering services. The Software products segment engages in the product development and creation of propriety software. The BPO segment provides services covering technical support, human resources, customer contact and transaction processing. The company offers services to customers in a range of industries, including insurance, banking and financial services, manufacturing, telecommunications, and transportation.MPR Soft offers & markets its services primarily to companies in the United States, and the Asia-Pacific region.</p>
       <h3>Software Development</h3>
         <p>MPR Soft's engineering team is proficient in all common software development and database environments, with extensive experience using Microsoft products, including Visual Studio and SQL Server. MPR Soft has developed a range of applications for Government, Military, Healthcare, Banking, miscellaneous vertical markets and small businesses.MPR Soft also specializes in software development specific to web environments, technology-based training and Software Configuration Management (SCM) for government and commercial clients.</p>
-        <p>MPR Soft is experienced in using a variety of software development environments and tools, including:<br/.
+        <p>MPR Soft is experienced in using a variety of software development environments and tools, including:<br/>
 
  <ul>       
             <li><b>Microsoft Model, View and Controller (MVC)</b></li> 
             <li><b>Entity Framework / LINQ</b></li>
             <li><b>.NET Framework / ASP.NET</b></li>
-            <lil><b>Transact-SQL</b></lil>
-            <li><b>Java</b></td>
+            <li><b>Transact-SQL</b></li>
+            <li><b>Java</b></li>
             <li><b>C/C++</b></li>
             <li><b>HTML</b></li>
             <li><b>Transact-SQL</b></li>
