--- a/aboutus.html
+++ b/aboutus.html
@@ -121,7 +121,7 @@
     <div class="footer-top">
       <div class="wrapper">  
         <div class="row">
-          <div class="col-md-5">
+          <div class="col-md-5 col-sm-8">
             <h3>Latest News</h3>
             <div class="latestNews"> 
                 <ul class="slides">
@@ -131,7 +131,7 @@
                 </ul>
               </div>    
           </div>
-          <div class="col-md-3">
+          <div class="col-md-3 col-sm-4">
             <div class="address">  
             <h3>Contact Us</h3>
             <p>Address: 21250 Barley Hall Ter,<br/>
@@ -142,7 +142,7 @@
             Email: info@mprsoft.com </p>
         </div>        
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 col-sm-12">
               <h3>SEND US A MESSAGE</h3>
               <p>If you're having problems about service, then don't hesitate to ask for help on the Forums.</p>
               <button class="btn send-email-btn" type="button">Click to send us an email</button>
@@ -153,10 +153,10 @@
     <div class="bottom-footer">
       <div class="wrapper">
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-6 col-sm-6">
             <p>© Copyright 2014.mprsoftinc. All Rights Reserved.</p>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-6 col-sm-6">
               <ul class="social-links">
                   <li><a class="facebook" href="#"></a></li>
                   <li><a class="twitter" href="#"></a></li>
